--- a/_posts/2023-04-20-5-cell-max-volume-17-09-55.md
+++ b/_posts/2023-04-20-5-cell-max-volume-17-09-55.md
@@ -16,9 +16,9 @@ A 3D design created in vZome.  Use your mouse or touch to interact.
 
 <figure style="width: 87%; margin: 5%">
   <vzome-viewer style="width: 100%; height: 60vh"
-       src="https://nanma80.github.io/vzome-sharing/2023/04/20/17-09-55-5-cell-max-volume/5-cell-max-volume.vZome" >
+       src="https://nan.ma/vzome-sharing/2023/04/20/17-09-55-5-cell-max-volume/5-cell-max-volume.vZome" >
     <img  style="width: 100%"
-       src="https://nanma80.github.io/vzome-sharing/2023/04/20/17-09-55-5-cell-max-volume/5-cell-max-volume.png" >
+       src="https://nan.ma/vzome-sharing/2023/04/20/17-09-55-5-cell-max-volume/5-cell-max-volume.png" >
   </vzome-viewer>
   <figcaption style="text-align: center; font-style: italic;">
     5 cell max volume
