--- a/_posts/2023-04-20-5-cell-max-volume-17-09-55.md
+++ b/_posts/2023-04-20-5-cell-max-volume-17-09-55.md
@@ -1,6 +1,6 @@
 ---
-title: 3D Shadows of Regular 4D Polytopes with Max Volumes
-description: A 3D design created in vZome. Use your mouse or touch to interact.
+title: Max Volume 3D Shadows of 4D Polytopes
+description: Project regular 4D polytopes to 3D and maximize the volume of the shadow
 image: https://www.nan.ma/vzome-sharing/2023/04/20/17-09-55-5-cell-max-volume/5-cell-max-volume.png
 published: true
 layout: vzome
@@ -12,7 +12,7 @@ layout: vzome
  
 {% endcomment %}
 
-For the 4D polytope 5-cell (simplex), this is the projection to 3D with the maximal volume.
+For the 4D polytope 5-cell (simplex), this is the projection to 3D with the maximal volume. This is an edge-first projection.
 
 <figure style="width: 87%; margin: 5%">
   <vzome-viewer style="width: 100%; height: 60vh"
@@ -25,7 +25,7 @@ For the 4D polytope 5-cell (simplex), this is the projection to 3D with the maxi
   </figcaption>
 </figure>
 
-For the 4D polytope 8-cell (tesseract), this is the projection to 3D with the maximal volume.
+For the 4D polytope 8-cell (tesseract), this is the projection to 3D with the maximal volume. This is a vertex-first projection.
 
 <figure style="width: 87%; margin: 5%">
   <vzome-viewer style="width: 100%; height: 60vh"
@@ -38,7 +38,7 @@ For the 4D polytope 8-cell (tesseract), this is the projection to 3D with the ma
   </figcaption>
 </figure>
 
-For the 4D polytope 16-cell (cross polytope), this is the projection to 3D with the maximal volume.
+For the 4D polytope 16-cell (cross polytope), this is the projection to 3D with the maximal volume. This is a vertex-first projection.
 
 <figure style="width: 87%; margin: 5%">
   <vzome-viewer style="width: 100%; height: 60vh"
@@ -48,5 +48,45 @@ For the 4D polytope 16-cell (cross polytope), this is the projection to 3D with 
   </vzome-viewer>
   <figcaption style="text-align: center; font-style: italic;">
     16-cell max volume projection
+  </figcaption>
+</figure>
+
+For the 4D polytope 24-cell, this is the projection to 3D with the maximal volume. It appears random, but one of the 2D projection of this 3D shape is the max area 2D shadow of the 24-cell.
+
+<figure style="width: 87%; margin: 5%">
+  <vzome-viewer style="width: 100%; height: 60vh"
+       src="https://www.nan.ma/vzome-sharing/2023/04/20/23-47-44-24-cell-max-volume/24-cell-max-volume.vZome" >
+    <img  style="width: 100%"
+       src="https://www.nan.ma/vzome-sharing/2023/04/20/23-47-44-24-cell-max-volume/24-cell-max-volume.png" >
+  </vzome-viewer>
+  <figcaption style="text-align: center; font-style: italic;">
+    24-cell max volume projection
+  </figcaption>
+</figure>
+
+For the 4D polytope 600-cell, this is the projection to 3D with the maximal volume. Just like the 24-cell, it appears random, but one of the 2D projection of this 3D shape is the max area 2D shadow of the 600-cell.
+
+<figure style="width: 87%; margin: 5%">
+  <vzome-viewer style="width: 100%; height: 60vh"
+       src="https://www.nan.ma/vzome-sharing/2023/04/20/23-48-47-600-cell-max-volume/600-cell-max-volume.vZome" >
+    <img  style="width: 100%"
+       src="https://www.nan.ma/vzome-sharing/2023/04/20/23-48-47-600-cell-max-volume/600-cell-max-volume.png" >
+  </vzome-viewer>
+  <figcaption style="text-align: center; font-style: italic;">
+    600-cell max volume projection
+  </figcaption>
+</figure>
+
+
+For the 4D polytope 120-cell, this is the projection to 3D with the maximal volume. It appears random and I don't really see any connection to other known projections.
+
+<figure style="width: 87%; margin: 5%">
+  <vzome-viewer style="width: 100%; height: 60vh"
+       src="https://www.nan.ma/vzome-sharing/2023/04/20/23-48-09-120-cell-max-volume/120-cell-max-volume.vZome" >
+    <img  style="width: 100%"
+       src="https://www.nan.ma/vzome-sharing/2023/04/20/23-48-09-120-cell-max-volume/120-cell-max-volume.png" >
+  </vzome-viewer>
+  <figcaption style="text-align: center; font-style: italic;">
+    120 cell max volume
   </figcaption>
 </figure>
