--- a/_posts/2023-04-20-5-cell-max-volume-17-09-55.md
+++ b/_posts/2023-04-20-5-cell-max-volume-17-09-55.md
@@ -1,7 +1,7 @@
 ---
 title: Max Volume 3D Shadows of 4D Polytopes
 description: Project regular 4D polytopes to 3D and maximize the volume of the shadow
-image: https://www.nan.ma/vzome-sharing/2023/04/20/17-09-55-5-cell-max-volume/5-cell-max-volume.png
+image: https://www.nan.ma/vzome-sharing/2023/04/20/23-59-17-24-cell-max-volume/24-cell-max-volume.png
 published: true
 layout: vzome
 ---
@@ -51,20 +51,21 @@ For the 4D polytope 16-cell (cross polytope), this is the projection to 3D with 
   </figcaption>
 </figure>
 
-For the 4D polytope 24-cell, this is the projection to 3D with the maximal volume. It appears random, but one of the 2D projection of this 3D shape is the max area 2D shadow of the 24-cell.
+For the 4D polytope 24-cell, this is the projection to 3D with the maximal volume. It appears random. However, one of the 2D projection of this 3D shape, with a 6-fold symmetry, is the max area 2D shadow of the 24-cell.
 
 <figure style="width: 87%; margin: 5%">
   <vzome-viewer style="width: 100%; height: 60vh"
-       src="https://www.nan.ma/vzome-sharing/2023/04/20/23-47-44-24-cell-max-volume/24-cell-max-volume.vZome" >
+       src="https://www.nan.ma/vzome-sharing/2023/04/20/23-59-17-24-cell-max-volume/24-cell-max-volume.vZome" >
     <img  style="width: 100%"
-       src="https://www.nan.ma/vzome-sharing/2023/04/20/23-47-44-24-cell-max-volume/24-cell-max-volume.png" >
+       src="https://www.nan.ma/vzome-sharing/2023/04/20/23-59-17-24-cell-max-volume/24-cell-max-volume.png" >
   </vzome-viewer>
   <figcaption style="text-align: center; font-style: italic;">
     24-cell max volume projection
   </figcaption>
 </figure>
 
-For the 4D polytope 600-cell, this is the projection to 3D with the maximal volume. Just like the 24-cell, it appears random, but one of the 2D projection of this 3D shape is the max area 2D shadow of the 600-cell.
+
+For the 4D polytope 600-cell, this is the projection to 3D with the maximal volume. Just like the 24-cell, it appears random. However, one of the 2D projection of this 3D shape, with a 10-fold symmetry, is the max area 2D shadow of the 600-cell.
 
 <figure style="width: 87%; margin: 5%">
   <vzome-viewer style="width: 100%; height: 60vh"
@@ -87,6 +88,6 @@ For the 4D polytope 120-cell, this is the projection to 3D with the maximal volu
        src="https://www.nan.ma/vzome-sharing/2023/04/20/23-48-09-120-cell-max-volume/120-cell-max-volume.png" >
   </vzome-viewer>
   <figcaption style="text-align: center; font-style: italic;">
-    120 cell max volume
+    120-cell max volume projection
   </figcaption>
 </figure>
