--- a/_posts/2023-04-20-5-cell-max-volume-17-09-55.md
+++ b/_posts/2023-04-20-5-cell-max-volume-17-09-55.md
@@ -90,3 +90,5 @@ For the 4D polytope 120-cell, this is the projection to 3D with the maximal volu
     120-cell max volume projection
   </figcaption>
 </figure>
+
+Thank you, Scott V, David Hall, for the discussion and some of the models here.
