--- a/_posts/2023-09-25-nonagon1-10-22-50.md
+++ b/_posts/2023-09-25-nonagon1-10-22-50.md
@@ -14,10 +14,8 @@ layout: vzome
 
 A 3D design created in vZome.  Use your mouse or touch to interact.
 
-Creating a Lego model by Alexander Holroyd. He presented it in
-https://www.youtube.com/watch?v=mWOEpogo5Pw&t=977s
+Creating a Lego model by Alexander Holroyd. He presented it in the Illustrating Math Seminar. Watch it [here](https://www.youtube.com/watch?v=mWOEpogo5Pw&t=977s)
 at the 16:18 mark. All struts have the same length.
-
 
 <figure style="width: 87%; margin: 5%">
   <vzome-viewer style="width: 100%; height: 60vh"
