--- a/_posts/2023-12-04-hyper_4_5_5fold-16-35-23.md
+++ b/_posts/2023-12-04-hyper_4_5_5fold-16-35-23.md
@@ -1,13 +1,13 @@
 ---
 title: hyper_4_5_5fold
 description: A 3D design created in vZome.  Use your mouse or touch to interact.
-image: https://nanma80.github.io/vzome-sharing/2023/12/04/16-35-23-hyper_4_5_5fold/hyper_4_5_5fold.png
+image: https://www.nan.ma/vzome-sharing/2023/12/04/16-35-23-hyper_4_5_5fold/hyper_4_5_5fold.png
 published: true
 layout: vzome
 ---
 
 {% comment %}
- - [***web page generated from this source***](<https://nanma80.github.io/vzome-sharing/2023/12/04/hyper_4_5_5fold-16-35-23.html>)
+ - [***web page generated from this source***](<https://www.nan.ma/vzome-sharing/2023/12/04/hyper_4_5_5fold-16-35-23.html>)
  - [data assets and more info](<https://github.com/nanma80/vzome-sharing/tree/main/2023/12/04/16-35-23-hyper_4_5_5fold/>)
  
 {% endcomment %}
@@ -16,9 +16,9 @@ A 3D design created in vZome.  Use your mouse or touch to interact.
 
 <figure style="width: 87%; margin: 5%">
   <vzome-viewer style="width: 100%; height: 60vh"
-       src="https://nanma80.github.io/vzome-sharing/2023/12/04/16-35-23-hyper_4_5_5fold/hyper_4_5_5fold.vZome" >
+       src="https://www.nan.ma/vzome-sharing/2023/12/04/16-35-23-hyper_4_5_5fold/hyper_4_5_5fold.vZome" >
     <img  style="width: 100%"
-       src="https://nanma80.github.io/vzome-sharing/2023/12/04/16-35-23-hyper_4_5_5fold/hyper_4_5_5fold.png" >
+       src="https://www.nan.ma/vzome-sharing/2023/12/04/16-35-23-hyper_4_5_5fold/hyper_4_5_5fold.png" >
   </vzome-viewer>
   <figcaption style="text-align: center; font-style: italic;">
     hyper_4_5_5fold
