--- a/_posts/2024-01-08-heptagon_4by3-15-58-13.md
+++ b/_posts/2024-01-08-heptagon_4by3-15-58-13.md
@@ -1,13 +1,13 @@
 ---
 title: heptagon_4by3
 description: A 3D design created in vZome.  Use your mouse or touch to interact.
-image: https://nanma80.github.io/vzome-sharing/2024/01/08/15-58-13-heptagon_4by3/heptagon_4by3.png
+image: https://www.nan.ma/vzome-sharing/2024/01/08/15-58-13-heptagon_4by3/heptagon_4by3.png
 published: true
 layout: vzome
 ---
 
 {% comment %}
- - [***web page generated from this source***](<https://nanma80.github.io/vzome-sharing/2024/01/08/heptagon_4by3-15-58-13.html>)
+ - [***web page generated from this source***](<https://www.nan.ma/vzome-sharing/2024/01/08/heptagon_4by3-15-58-13.html>)
  - [data assets and more info](<https://github.com/nanma80/vzome-sharing/tree/main/2024/01/08/15-58-13-heptagon_4by3/>)
  
 {% endcomment %}
@@ -16,9 +16,9 @@ A 3D design created in vZome.  Use your mouse or touch to interact.
 
 <figure style="width: 87%; margin: 5%">
   <vzome-viewer style="width: 100%; height: 60vh"
-       src="https://nanma80.github.io/vzome-sharing/2024/01/08/15-58-13-heptagon_4by3/heptagon_4by3.vZome" >
+       src="https://www.nan.ma/vzome-sharing/2024/01/08/15-58-13-heptagon_4by3/heptagon_4by3.vZome" >
     <img  style="width: 100%"
-       src="https://nanma80.github.io/vzome-sharing/2024/01/08/15-58-13-heptagon_4by3/heptagon_4by3.png" >
+       src="https://www.nan.ma/vzome-sharing/2024/01/08/15-58-13-heptagon_4by3/heptagon_4by3.png" >
   </vzome-viewer>
   <figcaption style="text-align: center; font-style: italic;">
     heptagon_4by3
