--- a/_posts/2024-10-09-twisted_dodec-14-44-46.md
+++ b/_posts/2024-10-09-twisted_dodec-14-44-46.md
@@ -1,13 +1,13 @@
 ---
 title: twisted dodecahedron
 description: A 3D design created in vZome.  Use your mouse or touch to interact.
-image: https://nanma80.github.io/vzome-sharing/2024/10/09/14-44-46-twisted_dodec/twisted_dodec.png
+image: https://www.nan.ma/vzome-sharing/2024/10/09/14-44-46-twisted_dodec/twisted_dodec.png
 published: true
 layout: vzome
 ---
 
 {% comment %}
- - [***web page generated from this source***](<https://nanma80.github.io/vzome-sharing/2024/10/09/twisted_dodec-14-44-46.html>)
+ - [***web page generated from this source***](<https://www.nan.ma/vzome-sharing/2024/10/09/twisted_dodec-14-44-46.html>)
  - [data assets and more info](<https://github.com/nanma80/vzome-sharing/tree/main/2024/10/09/14-44-46-twisted_dodec/>)
  
 {% endcomment %}
@@ -18,12 +18,13 @@ A 3D design created in vZome.  Use your mouse or touch to interact.
   
   
   <vzome-viewer style="width: 100%; height: 60dvh" 
-        src="https://nanma80.github.io/vzome-sharing/2024/10/09/14-44-46-twisted_dodec/twisted_dodec.vZome" >
+        src="https://www.nan.ma/vzome-sharing/2024/10/09/14-44-46-twisted_dodec/twisted_dodec.vZome" >
     <img  style="width: 100%"
-        src="https://nanma80.github.io/vzome-sharing/2024/10/09/14-44-46-twisted_dodec/twisted_dodec.png" >
+        src="https://www.nan.ma/vzome-sharing/2024/10/09/14-44-46-twisted_dodec/twisted_dodec.png" >
   </vzome-viewer>
 
   <figcaption style="text-align: center; font-style: italic;">
     twisted dodecahedron
   </figcaption>
 </figure>
+
