--- a/_posts/2024-10-09-twisted_tetra-16-51-36.md
+++ b/_posts/2024-10-09-twisted_tetra-16-51-36.md
@@ -1,13 +1,13 @@
 ---
 title: twisted tetrahedron
 description: A 3D design created in vZome.  Use your mouse or touch to interact.
-image: https://nanma80.github.io/vzome-sharing/2024/10/09/16-51-36-twisted_tetra/twisted_tetra.png
+image: https://www.nan.ma/vzome-sharing/2024/10/09/16-51-36-twisted_tetra/twisted_tetra.png
 published: true
 layout: vzome
 ---
 
 {% comment %}
- - [***web page generated from this source***](<https://nanma80.github.io/vzome-sharing/2024/10/09/twisted_tetra-16-51-36.html>)
+ - [***web page generated from this source***](<https://www.nan.ma/vzome-sharing/2024/10/09/twisted_tetra-16-51-36.html>)
  - [data assets and more info](<https://github.com/nanma80/vzome-sharing/tree/main/2024/10/09/16-51-36-twisted_tetra/>)
  
 {% endcomment %}
@@ -18,12 +18,13 @@ A 3D design created in vZome.  Use your mouse or touch to interact.
   
   
   <vzome-viewer style="width: 100%; height: 60dvh" 
-        src="https://nanma80.github.io/vzome-sharing/2024/10/09/16-51-36-twisted_tetra/twisted_tetra.vZome" >
+        src="https://www.nan.ma/vzome-sharing/2024/10/09/16-51-36-twisted_tetra/twisted_tetra.vZome" >
     <img  style="width: 100%"
-        src="https://nanma80.github.io/vzome-sharing/2024/10/09/16-51-36-twisted_tetra/twisted_tetra.png" >
+        src="https://www.nan.ma/vzome-sharing/2024/10/09/16-51-36-twisted_tetra/twisted_tetra.png" >
   </vzome-viewer>
 
   <figcaption style="text-align: center; font-style: italic;">
     twisted tetrahedron
   </figcaption>
 </figure>
+
