--- a/_posts/2025-06-09-hexagonal_grid-09-48-50.md
+++ b/_posts/2025-06-09-hexagonal_grid-09-48-50.md
@@ -1,13 +1,13 @@
 ---
 title: hexagonal_grid
 description: A 3D design created in vZome.  Use your mouse or touch to interact.
-image: https://nanma80.github.io/vzome-sharing/2025/06/09/09-48-50-hexagonal_grid/hexagonal_grid.png
+image: https://www.nan.ma/vzome-sharing/2025/06/09/09-48-50-hexagonal_grid/hexagonal_grid.png
 published: true
 layout: vzome
 ---
 
 {% comment %}
- - [***web page generated from this source***](<https://nanma80.github.io/vzome-sharing/2025/06/09/hexagonal_grid-09-48-50.html>)
+ - [***web page generated from this source***](<https://www.nan.ma/vzome-sharing/2025/06/09/hexagonal_grid-09-48-50.html>)
  - [data assets and more info](<https://github.com/nanma80/vzome-sharing/tree/main/2025/06/09/09-48-50-hexagonal_grid/>)
  
 {% endcomment %}
@@ -18,12 +18,13 @@ A 3D design created in vZome.  Use your mouse or touch to interact.
   
   
   <vzome-viewer style="width: 100%; height: 60dvh" 
-        src="https://nanma80.github.io/vzome-sharing/2025/06/09/09-48-50-hexagonal_grid/hexagonal_grid.vZome" >
+        src="https://www.nan.ma/vzome-sharing/2025/06/09/09-48-50-hexagonal_grid/hexagonal_grid.vZome" >
     <img  style="width: 100%"
-        src="https://nanma80.github.io/vzome-sharing/2025/06/09/09-48-50-hexagonal_grid/hexagonal_grid.png" >
+        src="https://www.nan.ma/vzome-sharing/2025/06/09/09-48-50-hexagonal_grid/hexagonal_grid.png" >
   </vzome-viewer>
 
   <figcaption style="text-align: center; font-style: italic;">
     hexagonal_grid
   </figcaption>
 </figure>
+
