--- a/_posts/2025-06-22-Herschel_graph-10-16-52.md
+++ b/_posts/2025-06-22-Herschel_graph-10-16-52.md
@@ -1,13 +1,13 @@
 ---
 title: 9-sided polyhedron described by the Herschel graph
 description: This is a 9-sided polyhedron described by the Herschel graph. This is the smallest convex polyhedron that does not have a Hamiltonian cycle.
-image: https://nanma80.github.io/vzome-sharing/2025/06/22/10-16-52-Herschel_graph/Herschel_graph.png
+image: https://www.nan.ma/vzome-sharing/2025/06/22/10-16-52-Herschel_graph/Herschel_graph.png
 published: true
 layout: vzome
 ---
 
 {% comment %}
- - [***web page generated from this source***](<https://nanma80.github.io/vzome-sharing/2025/06/22/Herschel_graph-10-16-52.html>)
+ - [***web page generated from this source***](<https://www.nan.ma/vzome-sharing/2025/06/22/Herschel_graph-10-16-52.html>)
  - [data assets and more info](<https://github.com/nanma80/vzome-sharing/tree/main/2025/06/22/10-16-52-Herschel_graph/>)
  
 {% endcomment %}
@@ -18,12 +18,13 @@ This is a 9-sided polyhedron described by the Herschel graph. This is the smalle
   
   
   <vzome-viewer style="width: 100%; height: 60dvh" 
-        src="https://nanma80.github.io/vzome-sharing/2025/06/22/10-16-52-Herschel_graph/Herschel_graph.vZome" >
+        src="https://www.nan.ma/vzome-sharing/2025/06/22/10-16-52-Herschel_graph/Herschel_graph.vZome" >
     <img  style="width: 100%"
-        src="https://nanma80.github.io/vzome-sharing/2025/06/22/10-16-52-Herschel_graph/Herschel_graph.png" >
+        src="https://www.nan.ma/vzome-sharing/2025/06/22/10-16-52-Herschel_graph/Herschel_graph.png" >
   </vzome-viewer>
 
   <figcaption style="text-align: center; font-style: italic;">
     9-sided polyhedron described by the Herschel graph
   </figcaption>
 </figure>
+
