--- a/_posts/2025-06-22-Herschel_graph-10-16-52.md
+++ b/_posts/2025-06-22-Herschel_graph-10-16-52.md
@@ -12,7 +12,11 @@ layout: vzome
  
 {% endcomment %}
 
-This is a 9-sided polyhedron described by the Herschel graph. This is the smallest convex polyhedron that does not have a Hamiltonian cycle.
+This is a 9-sided polyhedron described by the Herschel graph. This is the smallest convex polyhedron that does not have a Hamiltonian cycle. Links:
+
+[Youtube video by Numberphile](https://www.youtube.com/watch?v=3X2aQIMx5bs)
+
+[Wikipedia page for the Herschel graph](https://en.wikipedia.org/wiki/Herschel_graph)
 
 <figure style="width: 87%; margin: 5%">
   
