--- a/_posts/2025-06-26-vzome_draft-13-11-20.md
+++ b/_posts/2025-06-26-vzome_draft-13-11-20.md
@@ -1,13 +1,13 @@
 ---
 title: Squiggly icosahedron made of 60 congruent pentagons
 description: A 3D design created in vZome.  Use your mouse or touch to interact.
-image: https://nanma80.github.io/vzome-sharing/2025/06/26/13-11-20-vzome_draft/vzome_draft.png
+image: https://www.nan.ma/vzome-sharing/2025/06/26/13-11-20-vzome_draft/vzome_draft.png
 published: true
 layout: vzome
 ---
 
 {% comment %}
- - [***web page generated from this source***](<https://nanma80.github.io/vzome-sharing/2025/06/26/vzome_draft-13-11-20.html>)
+ - [***web page generated from this source***](<https://www.nan.ma/vzome-sharing/2025/06/26/vzome_draft-13-11-20.html>)
  - [data assets and more info](<https://github.com/nanma80/vzome-sharing/tree/main/2025/06/26/13-11-20-vzome_draft/>)
  
 {% endcomment %}
@@ -18,12 +18,13 @@ A 3D design created in vZome.  Use your mouse or touch to interact.
   
   
   <vzome-viewer style="width: 100%; height: 60dvh" 
-        src="https://nanma80.github.io/vzome-sharing/2025/06/26/13-11-20-vzome_draft/vzome_draft.vZome" >
+        src="https://www.nan.ma/vzome-sharing/2025/06/26/13-11-20-vzome_draft/vzome_draft.vZome" >
     <img  style="width: 100%"
-        src="https://nanma80.github.io/vzome-sharing/2025/06/26/13-11-20-vzome_draft/vzome_draft.png" >
+        src="https://www.nan.ma/vzome-sharing/2025/06/26/13-11-20-vzome_draft/vzome_draft.png" >
   </vzome-viewer>
 
   <figcaption style="text-align: center; font-style: italic;">
     Squiggly icosahedron made of 60 congruent pentagons
   </figcaption>
 </figure>
+
