--- a/_posts/2025-12-05-10_piece_v1-16-05-50.md
+++ b/_posts/2025-12-05-10_piece_v1-16-05-50.md
@@ -1,13 +1,13 @@
 ---
 title: 10_piece_v1
 description: A 3D design created in vZome.  Use your mouse or touch to interact.
-image: https://nanma80.github.io/vzome-sharing/2025/12/05/16-05-50-10_piece_v1/10_piece_v1.png
+image: https://www.nan.ma/vzome-sharing/2025/12/05/16-05-50-10_piece_v1/10_piece_v1.png
 published: true
 layout: vzome
 ---
 
 {% comment %}
- - [***web page generated from this source***](<https://nanma80.github.io/vzome-sharing/2025/12/05/10_piece_v1-16-05-50.html>)
+ - [***web page generated from this source***](<https://www.nan.ma/vzome-sharing/2025/12/05/10_piece_v1-16-05-50.html>)
  - [data assets and more info](<https://github.com/nanma80/vzome-sharing/tree/main/2025/12/05/16-05-50-10_piece_v1/>)
  
 {% endcomment %}
@@ -18,12 +18,13 @@ A 3D design created in vZome.  Use your mouse or touch to interact.
   
   <div style='display:flex;'><div style='margin: auto;'><vzome-viewer-previous label='prev step'></vzome-viewer-previous><vzome-viewer-next label='next step'></vzome-viewer-next></div></div>
   <vzome-viewer style="width: 100%; height: 60dvh" indexed='true'
-        src="https://nanma80.github.io/vzome-sharing/2025/12/05/16-05-50-10_piece_v1/10_piece_v1.vZome" >
+        src="https://www.nan.ma/vzome-sharing/2025/12/05/16-05-50-10_piece_v1/10_piece_v1.vZome" >
     <img  style="width: 100%"
-        src="https://nanma80.github.io/vzome-sharing/2025/12/05/16-05-50-10_piece_v1/10_piece_v1.png" >
+        src="https://www.nan.ma/vzome-sharing/2025/12/05/16-05-50-10_piece_v1/10_piece_v1.png" >
   </vzome-viewer>
 
   <figcaption style="text-align: center; font-style: italic;">
     10_piece_v1
   </figcaption>
 </figure>
+
