--- a/_posts/2026-01-17-221_24_cell_triality_nan-15-27-27.md
+++ b/_posts/2026-01-17-221_24_cell_triality_nan-15-27-27.md
@@ -1,13 +1,13 @@
 ---
 title: 221_24_cell_triality_nan
 description: A 3D design created in vZome.  Use your mouse or touch to interact.
-image: https://nanma80.github.io/vzome-sharing/2026/01/17/15-27-27-221_24_cell_triality_nan/221_24_cell_triality_nan.png
+image: https://www.nan.ma/vzome-sharing/2026/01/17/15-27-27-221_24_cell_triality_nan/221_24_cell_triality_nan.png
 published: true
 layout: vzome
 ---
 
 {% comment %}
- - [***web page generated from this source***](<https://nanma80.github.io/vzome-sharing/2026/01/17/221_24_cell_triality_nan-15-27-27.html>)
+ - [***web page generated from this source***](<https://www.nan.ma/vzome-sharing/2026/01/17/221_24_cell_triality_nan-15-27-27.html>)
  - [data assets and more info](<https://github.com/nanma80/vzome-sharing/tree/main/2026/01/17/15-27-27-221_24_cell_triality_nan/>)
  
 {% endcomment %}
@@ -18,12 +18,13 @@ A 3D design created in vZome.  Use your mouse or touch to interact.
   
   
   <vzome-viewer style="width: 100%; height: 60dvh" 
-        src="https://nanma80.github.io/vzome-sharing/2026/01/17/15-27-27-221_24_cell_triality_nan/221_24_cell_triality_nan.vZome" >
+        src="https://www.nan.ma/vzome-sharing/2026/01/17/15-27-27-221_24_cell_triality_nan/221_24_cell_triality_nan.vZome" >
     <img  style="width: 100%"
-        src="https://nanma80.github.io/vzome-sharing/2026/01/17/15-27-27-221_24_cell_triality_nan/221_24_cell_triality_nan.png" >
+        src="https://www.nan.ma/vzome-sharing/2026/01/17/15-27-27-221_24_cell_triality_nan/221_24_cell_triality_nan.png" >
   </vzome-viewer>
 
   <figcaption style="text-align: center; font-style: italic;">
     221_24_cell_triality_nan
   </figcaption>
 </figure>
+
